--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -29,7 +29,7 @@
     </div>
     <br>
     <div class="actions">
-      <%= f.submit "Sign up", class:"btn btn-success" %>
+      <%= f.submit t("sign_up"), class:"btn btn-success" %>
     </div>
   <% end %>
 
