--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,7 @@
 <% if user_signed_in? %>
   <div>
-    <p>Hello - <%= current_user.username%></p>
+    <p><%= t ".hello" %> - <%= current_user.username%></p>
   </div>
 <% else %>
-  <h3>Home page</h3>
+  <h3><%= t ".home_page" %></h3>
 <% end %>
