--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,7 @@
-<%= search_form_for @q, class: "form-inline" do |f| %>
+<%= search_form_for @search_users, method:  do |f| %>
 
   <div class="form-group">
-    <%= f.label :username_or_phonenumber_or_email_cont, "Name or email or phone:" %>
+    <%= f.label :username_or_phonenumber_or_email, "Name or email or phone:" %>
     <%= f.search_field :username_or_phonenumber_or_email_cont, class: "form-control" %><br>
   </div>
   <%= f.submit "Search", class: "btn btn-default" %>
@@ -9,7 +9,7 @@
 <table class="table table-hover">
 
   <tbody>
-    <% @result.each do |user| %>
+    <% @results.each do |user| %>
       <tr>
         <td> <%= user.username %> </td>
         <td> <%=user.email %> </td>
